--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-
+DB_CONNECTION_STRING="postgresql://furnituredb_owner:npg_g1qZYh0OnwKi@ep-dark-tree-a876qmse-pooler.eastus2.azure.neon.tech/furnituredb?sslmode=require"
 JWT_SECRET=MaSuperCleSecrete12345
